--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
             <div class="flex items-center justify-between p-6 border-b border-border-warm">
                 <h3 class="font-display text-2xl font-bold text-forest">Curriculum Vitae</h3>
                 <div class="flex items-center gap-3">
-                    <a href="CV_OB_october25.pdf" download
+                    <a href="OndineBerland_CV.pdf" download
                         class="inline-flex items-center gap-2 px-4 py-2 bg-forest text-white font-sans font-medium rounded-lg hover:bg-forest-light transition-colors">
                         <svg class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
