--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     </div>
                     <!-- Portrait Image -->
                     <div class="relative w-full max-w-xs mx-auto">
-                        <img src="images/portrait.jpg" alt="Dr. Ondine Berland"
+                        <img src="portrait.jpg" alt="Dr. Ondine Berland"
                             class="w-full h-auto rounded-2xl shadow-2xl border-4 border-white/50 object-cover">
                     </div>
                 </div>
