--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@
 
             <!-- PDF Viewer -->
             <div class="flex-1 overflow-hidden">
-                <embed src="CV_OB_october25.pdf" type="application/pdf" class="w-full h-full rounded-b-2xl" />
+                <embed src="OndineBerland_CV.pdf" type="application/pdf" class="w-full h-full rounded-b-2xl" />
             </div>
         </div>
     </div>
