Update title and name in index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Ondine Berland | Environmental Economics</title>
+    <title>Ondine Berland | Environmental Economics</title>
     <meta name="description"
         content="Academic portfolio of Dr. Ondine Berland, Postdoctoral Fellow in Environmental Economics at LSE.">
-
+    <meta property="og:url" content="https:ondineberland.com">
+    <meta property="og:image" content="https://www.ondineberland.com/portrait.jpg">
+    
+    <!-- Image details (recommended) -->
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -172,7 +178,7 @@
             <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-12 items-center relative z-10">
                 <div class="space-y-8 reveal">
                     <h1 class="font-display text-5xl md:text-7xl font-bold text-text-main leading-tight">
-                        Dr. Ondine <br>
+                        Ondine <br>
                         <span class="text-forest">Berland</span>
                     </h1>
                     <p class="font-body text-xl md:text-2xl text-text-muted leading-relaxed text-balance">
