--- a/index.html
+++ b/index.html
@@ -984,10 +984,9 @@
             </div>
 
             <div class="max-w-4xl mx-auto px-6 text-center relative z-10 reveal">
-                <h2 class="font-display text-4xl md:text-5xl font-bold mb-8">Let's connect.</h2>
+                <h2 class="font-display text-4xl md:text-5xl font-bold mb-8">Let's connect about research.</h2>
                 <p class="font-body text-xl md:text-2xl text-white/90 mb-12 leading-relaxed text-balance">
-                    Whether you're a researcher, journalist, or student interested in environmental economics, I'd love
-                    to hear from you.
+                    If you'd like to talk about research, feel free to reach out.
                 </p>
 
                 <div class="flex flex-col md:flex-row justify-center items-center gap-8 mb-16">
